// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/AppFrame Basic 1`] = `
<div
  data-css-2p2lwl=""
>
  <div
    data-css-teuamr=""
    href="#ps-appframe--skip-target"
  >
    <button
      data-css-c3sd2l=""
      disabled={false}
      style={Object {}}
      tabIndex={0}
    >
      <span
        data-css-15b13by=""
      >
        skip to main content
      </span>
    </button>
  </div>
  <div
    data-css-1oxt2bx=""
    id="ps-appframe--topnav"
  >
    <div>
      <div
        data-css-tuvdh3=""
      >
        <div
          data-css-1kfsc44=""
        >
          <div
            data-css-1ij5lym=""
          >
            <div
              data-css-1yi1k4r=""
            >
              <div
                data-css-1yppk9l=""
              >
                <svg
                  aria-hidden={true}
                  viewBox="0 0 32 32"
                >
                  <defs>
                    <linearGradient
                      gradientUnits="userSpaceOnUse"
                      id="skills-gradient"
                      x1="45.6377"
                      x2="-32.2436"
                      y1="47.4727"
                      y2="-35.2537"
                    >
                      <stop
                        offset="0.03"
                        stopColor="#F05A28"
                      />
                      <stop
                        offset="0.93"
                        stopColor="#EB008B"
                      />
                    </linearGradient>
                  </defs>
                  <path
                    d="M0 0V32H32V0H0ZM9.4053 12.7438L15.088 16L9.4053 19.287V12.7438ZM9.4053 24.8503V21.6468L19.1842 16L9.4053 10.3532V7.17166L24.6955 16L9.4053 24.8503Z"
                    fill="url(#skills-gradient)"
                  />
                </svg>
              </div>
              <div
                data-css-1b9xv68=""
              >
                SKILLS
              </div>
            </div>
          </div>
        </div>
        <div
          data-css-1ns9ldv=""
        />
        <div
          data-css-jgr69u=""
        />
        <div>
          <div
            data-css-1ij5lym=""
          >
            <div
              data-css-91smc8=""
            >
              <div
                data-css-79vgce=""
              >
                <div
                  aria-label="Jake"
                  data-css-1xbr5gr=""
                  style={
                    Object {
                      "backgroundColor": "#008F46",
                    }
                  }
                >
                  J
                </div>
              </div>
              <div
                data-css-1mmc9g1=""
              >
                <div
                  data-css-6flzpu=""
                >
                  Jake
                </div>
                <div
                  data-css-60db85=""
                >
                  Accenture
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-css-1lvztem=""
  >
    <main
      data-css-1ixsor8=""
    >
      <a
        id="ps-appframe--skip-target"
        onClick={[Function]}
        tabIndex={-1}
      />
      <div
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        <div
          data-css-60rhmp=""
        >
          <div
            data-css-f5q9fb=""
          >
            <div
              data-css-wlfhsa=""
            >
              <h3
                data-css-vetqvm=""
              >
                Page title
              </h3>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-60rhmp=""
      >
        <p
          data-css-17nixd9=""
        >
          Cupcake ipsum dolor sit amet. Sweet gummi bears dragée. Pie dragée cotton candy candy canes bear claw apple pie. Dessert apple pie caramels carrot cake bear claw sweet donut. Croissant chocolate bear claw jelly chocolate candy pie pudding caramels. Cake muffin candy liquorice liquorice tiramisu powder pie dragée. Danish soufflé sweet apple pie cupcake tart. Danish cookie oat cake tiramisu lemon drops pie apple pie cake cotton candy. Pudding brownie jujubes. Chocolate bar biscuit liquorice candy jelly-o tiramisu icing muffin sweet roll. Jelly candy canes chocolate dragée. Danish biscuit sugar plum cake. Cotton candy soufflé muffin gummi bears.
        </p>
        <p
          data-css-17nixd9=""
        >
          Sweet roll sweet roll cotton candy marshmallow lemon drops caramels sweet roll toffee. Bear claw powder ice cream topping wafer cake tootsie roll. Lemon drops pudding dessert toffee fruitcake toffee. Icing marzipan cake pastry biscuit liquorice chupa chups sesame snaps. Biscuit muffin donut. Marshmallow carrot cake icing icing dragée jujubes lemon drops. Danish cheesecake sesame snaps. Sweet sugar plum fruitcake tootsie roll. Fruitcake jelly-o soufflé muffin cheesecake pie apple pie jelly powder. Cake dragée danish muffin dragée soufflé marzipan croissant danish. Soufflé chupa chups cake biscuit icing pastry cake danish danish. Icing cotton candy oat cake chocolate macaroon tiramisu sweet dragée cake. Ice cream carrot cake lemon drops. Jelly sweet wafer liquorice brownie sesame snaps halvah apple pie jelly-o.
        </p>
        <p
          data-css-17nixd9=""
        >
          Tootsie roll dragée apple pie. Pie cake toffee caramels gummies chupa chups carrot cake chupa chups. Jelly-o fruitcake macaroon chocolate. Brownie lollipop sugar plum gummies marshmallow muffin bonbon carrot cake. Pudding powder lemon drops halvah. Icing cupcake pastry chupa chups danish sweet bear claw sugar plum. Chupa chups wafer donut lollipop. Sweet roll croissant cake chocolate cake croissant pastry toffee. Chocolate cake liquorice halvah pastry danish candy canes. Apple pie pastry topping sesame snaps cupcake liquorice icing chocolate bar brownie. Chocolate cake sesame snaps cake gummies cupcake pastry jujubes fruitcake. Muffin fruitcake soufflé macaroon danish. Dessert chocolate marshmallow sesame snaps donut toffee ice cream sugar plum dragée.
        </p>
        <p
          data-css-17nixd9=""
        >
          Marzipan lollipop jelly-o soufflé macaroon tart danish tart dessert. Chupa chups lemon drops lemon drops jujubes dragée dessert. Wafer chupa chups gummi bears sugar plum gummies. Powder topping apple pie danish sweet roll. Pudding toffee brownie. Tootsie roll lemon drops sweet macaroon jelly-o oat cake muffin chocolate. Wafer chocolate danish cookie cookie danish. Chocolate jelly-o gingerbread fruitcake croissant wafer lollipop bonbon macaroon. Carrot cake candy dessert. Brownie gummies topping sweet roll jelly sesame snaps croissant marshmallow caramels. Candy canes jelly-o jelly beans chupa chups tiramisu cupcake cake tart. Biscuit brownie chocolate bar danish candy canes donut liquorice. Muffin cake jelly beans muffin powder gingerbread toffee. Gingerbread topping toffee chupa chups sweet roll.
        </p>
        <p
          data-css-17nixd9=""
        >
          Jelly beans gingerbread dessert macaroon candy canes. Candy liquorice carrot cake chocolate bar pastry dessert caramels danish. Donut apple pie tart dragée sesame snaps chocolate tootsie roll jelly-o sugar plum. Chocolate cake sesame snaps jelly beans. Gummies pudding gummies. Jelly-o topping biscuit cookie halvah pudding gingerbread toffee cake. Sesame snaps topping icing jelly cake donut macaroon candy canes jelly beans. Tiramisu pie pie. Cake gingerbread pastry topping jujubes apple pie pie. Jelly beans marshmallow chocolate cake chocolate cake biscuit danish dessert. Halvah biscuit macaroon. Sugar plum pie gummi bears gummies pastry.
        </p>
        <p
          data-css-17nixd9=""
        >
          Marzipan lollipop jelly-o soufflé macaroon tart danish tart dessert. Chupa chups lemon drops lemon drops jujubes dragée dessert. Wafer chupa chups gummi bears sugar plum gummies. Powder topping apple pie danish sweet roll. Pudding toffee brownie. Tootsie roll lemon drops sweet macaroon jelly-o oat cake muffin chocolate. Wafer chocolate danish cookie cookie danish. Chocolate jelly-o gingerbread fruitcake croissant wafer lollipop bonbon macaroon. Carrot cake candy dessert. Brownie gummies topping sweet roll jelly sesame snaps croissant marshmallow caramels. Candy canes jelly-o jelly beans chupa chups tiramisu cupcake cake tart. Biscuit brownie chocolate bar danish candy canes donut liquorice. Muffin cake jelly beans muffin powder gingerbread toffee. Gingerbread topping toffee chupa chups sweet roll.
        </p>
        <p
          data-css-17nixd9=""
        >
          Jelly beans gingerbread dessert macaroon candy canes. Candy liquorice carrot cake chocolate bar pastry dessert caramels danish. Donut apple pie tart dragée sesame snaps chocolate tootsie roll jelly-o sugar plum. Chocolate cake sesame snaps jelly beans. Gummies pudding gummies. Jelly-o topping biscuit cookie halvah pudding gingerbread toffee cake. Sesame snaps topping icing jelly cake donut macaroon candy canes jelly beans. Tiramisu pie pie. Cake gingerbread pastry topping jujubes apple pie pie. Jelly beans marshmallow chocolate cake chocolate cake biscuit danish dessert. Halvah biscuit macaroon. Sugar plum pie gummi bears gummies pastry.
        </p>
      </div>
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/AppFrame Example Short Content 1`] = `
<div
  data-css-2p2lwl=""
>
  <div
    data-css-teuamr=""
    href="#ps-appframe--skip-target"
  >
    <button
      data-css-c3sd2l=""
      disabled={false}
      style={Object {}}
      tabIndex={0}
    >
      <span
        data-css-15b13by=""
      >
        skip to main content
      </span>
    </button>
  </div>
  <div
    data-css-1oxt2bx=""
    id="ps-appframe--topnav"
  >
    <div>
      <div
        data-css-tuvdh3=""
      >
        <div
          data-css-1kfsc44=""
        >
          <div
            data-css-1ij5lym=""
          >
            <div
              data-css-1yi1k4r=""
            >
              <div
                data-css-1yppk9l=""
              >
                <svg
                  aria-hidden={true}
                  viewBox="0 0 32 32"
                >
                  <defs>
                    <linearGradient
                      gradientUnits="userSpaceOnUse"
                      id="skills-gradient"
                      x1="45.6377"
                      x2="-32.2436"
                      y1="47.4727"
                      y2="-35.2537"
                    >
                      <stop
                        offset="0.03"
                        stopColor="#F05A28"
                      />
                      <stop
                        offset="0.93"
                        stopColor="#EB008B"
                      />
                    </linearGradient>
                  </defs>
                  <path
                    d="M0 0V32H32V0H0ZM9.4053 12.7438L15.088 16L9.4053 19.287V12.7438ZM9.4053 24.8503V21.6468L19.1842 16L9.4053 10.3532V7.17166L24.6955 16L9.4053 24.8503Z"
                    fill="url(#skills-gradient)"
                  />
                </svg>
              </div>
              <div
                data-css-1b9xv68=""
              >
                SKILLS
              </div>
            </div>
          </div>
        </div>
        <div
          data-css-1ns9ldv=""
        />
        <div
          data-css-jgr69u=""
        />
        <div>
          <div
            data-css-1ij5lym=""
          >
            <div
              data-css-91smc8=""
            >
              <div
                data-css-79vgce=""
              >
                <div
                  aria-label="Jake"
                  data-css-1xbr5gr=""
                  style={
                    Object {
                      "backgroundColor": "#008F46",
                    }
                  }
                >
                  J
                </div>
              </div>
              <div
                data-css-1mmc9g1=""
              >
                <div
                  data-css-6flzpu=""
                >
                  Jake
                </div>
                <div
                  data-css-60db85=""
                >
                  Accenture
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-css-1lvztem=""
  >
    <div
      data-css-1429j9j=""
    >
      <div
        data-css-1srorb2=""
      >
        <div
          data-css-axmbrd=""
          data-css-q1pa3g=""
          data-scrollable={true}
        >
          <div
            data-css-1srorb2=""
          >
            <div
              data-css-3e2h8g=""
              onScroll={[Function]}
            >
              <div>
                <div
                  style={
                    Object {
                      "margin": "12px 0 0",
                      "opacity": 0,
                      "padding": "0 24px",
                    }
                  }
                >
                  <h2
                    style={
                      Object {
                        "margin": 0,
                      }
                    }
                  >
                    <span
                      data-css-v1s45p=""
                    >
                      Section Header
                    </span>
                  </h2>
                </div>
                <ul
                  data-css-15hj73r=""
                >
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              First Item
                            </span>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          data-css-1pa08jv=""
                          data-css-1xd3fna=""
                        >
                          <a
                            href="#"
                          >
                            <span
                              data-css-113cwui=""
                            >
                              First SubItem
                            </span>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          data-css-1pa08jv=""
                          data-css-1xd3fna=""
                        >
                          <a
                            href="#"
                          >
                            <span
                              data-css-113cwui=""
                            >
                              Second SubItem
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              Second Item
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                </ul>
                <div
                  style={
                    Object {
                      "borderBottom": "1px solid rgba(255, 255, 255, 0.15)",
                      "height": 1,
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            data-css-1ackutz=""
            data-css-ejkno9=""
            draggable={true}
            onDrag={[Function]}
            onDragEnd={[Function]}
            onDragStart={[Function]}
          />
        </div>
      </div>
    </div>
    <main
      data-css-1ixsor8=""
    >
      <a
        id="ps-appframe--skip-target"
        onClick={[Function]}
        tabIndex={-1}
      />
      <div
        data-css-60rhmp=""
      >
        <p
          data-css-17nixd9=""
        >
          Cupcake ipsum dolor sit amet. Sweet gummi bears dragée. Pie dragée cotton candy candy canes bear claw apple pie.
        </p>
      </div>
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/AppFrame Side Nav Controlled 1`] = `
<div
  data-css-2p2lwl=""
>
  <div
    data-css-teuamr=""
    href="#ps-appframe--skip-target"
  >
    <button
      data-css-c3sd2l=""
      disabled={false}
      style={Object {}}
      tabIndex={0}
    >
      <span
        data-css-15b13by=""
      >
        skip to main content
      </span>
    </button>
  </div>
  <div
    data-css-1oxt2bx=""
    id="ps-appframe--topnav"
  >
    <div>
      <div
        data-css-tuvdh3=""
      >
        <div
          data-css-1qn6dtd=""
        >
          <span
            data-css-ruxays=""
          >
            <div
              data-css-1ij5lym=""
            >
              <button
                data-css-167upi1=""
                onClick={[Function]}
              >
                <span
                  data-css-50rv4t=""
                >
                  <span
                    data-css-1009u4g=""
                  >
                    <div
                      data-css-7dab2f=""
                    >
                      <svg
                        aria-label="menu icon"
                        role="img"
                        viewBox="0 0 24 24"
                      >
                        <path
                          clipRule="evenodd"
                          d="M22 11.5v1a.5.5 0 01-.5.5h-19a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h19a.5.5 0 01.5.5zM2.5 17h18.98a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5zm0-12h18.977a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5z"
                          fillRule="evenodd"
                        />
                      </svg>
                    </div>
                  </span>
                </span>
              </button>
            </div>
            <div
              data-css-1pig4yn=""
            />
          </span>
        </div>
        <div
          data-css-1kfsc44=""
        >
          <div
            data-css-1ij5lym=""
          >
            <div
              data-css-1yi1k4r=""
            >
              <div
                data-css-1yppk9l=""
              >
                <svg
                  aria-hidden={true}
                  viewBox="0 0 32 32"
                >
                  <defs>
                    <linearGradient
                      gradientUnits="userSpaceOnUse"
                      id="skills-gradient"
                      x1="45.6377"
                      x2="-32.2436"
                      y1="47.4727"
                      y2="-35.2537"
                    >
                      <stop
                        offset="0.03"
                        stopColor="#F05A28"
                      />
                      <stop
                        offset="0.93"
                        stopColor="#EB008B"
                      />
                    </linearGradient>
                  </defs>
                  <path
                    d="M0 0V32H32V0H0ZM9.4053 12.7438L15.088 16L9.4053 19.287V12.7438ZM9.4053 24.8503V21.6468L19.1842 16L9.4053 10.3532V7.17166L24.6955 16L9.4053 24.8503Z"
                    fill="url(#skills-gradient)"
                  />
                </svg>
              </div>
              <div
                data-css-1b9xv68=""
              >
                SKILLS
              </div>
            </div>
          </div>
        </div>
        <div
          data-css-1ns9ldv=""
        />
        <div
          data-css-jgr69u=""
        />
        <div>
          <div
            data-css-1ij5lym=""
          >
            <div
              data-css-91smc8=""
            >
              <div
                data-css-79vgce=""
              >
                <div
                  aria-label="Jake"
                  data-css-1xbr5gr=""
                  style={
                    Object {
                      "backgroundColor": "#008F46",
                    }
                  }
                >
                  J
                </div>
              </div>
              <div
                data-css-1mmc9g1=""
              >
                <div
                  data-css-6flzpu=""
                >
                  Jake
                </div>
                <div
                  data-css-60db85=""
                >
                  Accenture
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-css-1lvztem=""
  >
    <div
      data-css-1429j9j=""
    >
      <div
        data-css-1srorb2=""
      >
        <div
          data-css-axmbrd=""
          data-css-q1pa3g=""
          data-scrollable={true}
        >
          <div
            data-css-1srorb2=""
          >
            <div
              data-css-3e2h8g=""
              onScroll={[Function]}
            >
              <div>
                <div
                  style={
                    Object {
                      "margin": "12px 0 0",
                      "opacity": 0,
                      "padding": "0 24px",
                    }
                  }
                >
                  <h2
                    style={
                      Object {
                        "margin": 0,
                      }
                    }
                  >
                    <span
                      data-css-v1s45p=""
                    >
                      Section Header
                    </span>
                  </h2>
                </div>
                <ul
                  data-css-15hj73r=""
                >
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              First Item
                            </span>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          data-css-1pa08jv=""
                          data-css-1xd3fna=""
                        >
                          <a
                            href="#"
                          >
                            <span
                              data-css-113cwui=""
                            >
                              First SubItem
                            </span>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          data-css-1pa08jv=""
                          data-css-1xd3fna=""
                        >
                          <a
                            href="#"
                          >
                            <span
                              data-css-113cwui=""
                            >
                              Second SubItem
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              Second Item
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                </ul>
                <div
                  style={
                    Object {
                      "borderBottom": "1px solid rgba(255, 255, 255, 0.15)",
                      "height": 1,
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            data-css-1ackutz=""
            data-css-ejkno9=""
            draggable={true}
            onDrag={[Function]}
            onDragEnd={[Function]}
            onDragStart={[Function]}
          />
        </div>
      </div>
    </div>
    <main
      data-css-1ixsor8=""
    >
      <a
        id="ps-appframe--skip-target"
        onClick={[Function]}
        tabIndex={-1}
      />
      <div
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        <div
          data-css-60rhmp=""
        >
          <div
            data-css-f5q9fb=""
          >
            <div
              data-css-wlfhsa=""
            >
              <h3
                data-css-vetqvm=""
              >
                Page title
              </h3>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-60rhmp=""
      >
        <p
          data-css-17nixd9=""
        >
          Cupcake ipsum dolor sit amet. Sweet gummi bears dragée. Pie dragée cotton candy candy canes bear claw apple pie. Dessert apple pie caramels carrot cake bear claw sweet donut. Croissant chocolate bear claw jelly chocolate candy pie pudding caramels. Cake muffin candy liquorice liquorice tiramisu powder pie dragée. Danish soufflé sweet apple pie cupcake tart. Danish cookie oat cake tiramisu lemon drops pie apple pie cake cotton candy. Pudding brownie jujubes. Chocolate bar biscuit liquorice candy jelly-o tiramisu icing muffin sweet roll. Jelly candy canes chocolate dragée. Danish biscuit sugar plum cake. Cotton candy soufflé muffin gummi bears.
        </p>
        <p
          data-css-17nixd9=""
        >
          Sweet roll sweet roll cotton candy marshmallow lemon drops caramels sweet roll toffee. Bear claw powder ice cream topping wafer cake tootsie roll. Lemon drops pudding dessert toffee fruitcake toffee. Icing marzipan cake pastry biscuit liquorice chupa chups sesame snaps. Biscuit muffin donut. Marshmallow carrot cake icing icing dragée jujubes lemon drops. Danish cheesecake sesame snaps. Sweet sugar plum fruitcake tootsie roll. Fruitcake jelly-o soufflé muffin cheesecake pie apple pie jelly powder. Cake dragée danish muffin dragée soufflé marzipan croissant danish. Soufflé chupa chups cake biscuit icing pastry cake danish danish. Icing cotton candy oat cake chocolate macaroon tiramisu sweet dragée cake. Ice cream carrot cake lemon drops. Jelly sweet wafer liquorice brownie sesame snaps halvah apple pie jelly-o.
        </p>
        <p
          data-css-17nixd9=""
        >
          Tootsie roll dragée apple pie. Pie cake toffee caramels gummies chupa chups carrot cake chupa chups. Jelly-o fruitcake macaroon chocolate. Brownie lollipop sugar plum gummies marshmallow muffin bonbon carrot cake. Pudding powder lemon drops halvah. Icing cupcake pastry chupa chups danish sweet bear claw sugar plum. Chupa chups wafer donut lollipop. Sweet roll croissant cake chocolate cake croissant pastry toffee. Chocolate cake liquorice halvah pastry danish candy canes. Apple pie pastry topping sesame snaps cupcake liquorice icing chocolate bar brownie. Chocolate cake sesame snaps cake gummies cupcake pastry jujubes fruitcake. Muffin fruitcake soufflé macaroon danish. Dessert chocolate marshmallow sesame snaps donut toffee ice cream sugar plum dragée.
        </p>
        <p
          data-css-17nixd9=""
        >
          Marzipan lollipop jelly-o soufflé macaroon tart danish tart dessert. Chupa chups lemon drops lemon drops jujubes dragée dessert. Wafer chupa chups gummi bears sugar plum gummies. Powder topping apple pie danish sweet roll. Pudding toffee brownie. Tootsie roll lemon drops sweet macaroon jelly-o oat cake muffin chocolate. Wafer chocolate danish cookie cookie danish. Chocolate jelly-o gingerbread fruitcake croissant wafer lollipop bonbon macaroon. Carrot cake candy dessert. Brownie gummies topping sweet roll jelly sesame snaps croissant marshmallow caramels. Candy canes jelly-o jelly beans chupa chups tiramisu cupcake cake tart. Biscuit brownie chocolate bar danish candy canes donut liquorice. Muffin cake jelly beans muffin powder gingerbread toffee. Gingerbread topping toffee chupa chups sweet roll.
        </p>
        <p
          data-css-17nixd9=""
        >
          Jelly beans gingerbread dessert macaroon candy canes. Candy liquorice carrot cake chocolate bar pastry dessert caramels danish. Donut apple pie tart dragée sesame snaps chocolate tootsie roll jelly-o sugar plum. Chocolate cake sesame snaps jelly beans. Gummies pudding gummies. Jelly-o topping biscuit cookie halvah pudding gingerbread toffee cake. Sesame snaps topping icing jelly cake donut macaroon candy canes jelly beans. Tiramisu pie pie. Cake gingerbread pastry topping jujubes apple pie pie. Jelly beans marshmallow chocolate cake chocolate cake biscuit danish dessert. Halvah biscuit macaroon. Sugar plum pie gummi bears gummies pastry.
        </p>
        <p
          data-css-17nixd9=""
        >
          Marzipan lollipop jelly-o soufflé macaroon tart danish tart dessert. Chupa chups lemon drops lemon drops jujubes dragée dessert. Wafer chupa chups gummi bears sugar plum gummies. Powder topping apple pie danish sweet roll. Pudding toffee brownie. Tootsie roll lemon drops sweet macaroon jelly-o oat cake muffin chocolate. Wafer chocolate danish cookie cookie danish. Chocolate jelly-o gingerbread fruitcake croissant wafer lollipop bonbon macaroon. Carrot cake candy dessert. Brownie gummies topping sweet roll jelly sesame snaps croissant marshmallow caramels. Candy canes jelly-o jelly beans chupa chups tiramisu cupcake cake tart. Biscuit brownie chocolate bar danish candy canes donut liquorice. Muffin cake jelly beans muffin powder gingerbread toffee. Gingerbread topping toffee chupa chups sweet roll.
        </p>
        <p
          data-css-17nixd9=""
        >
          Jelly beans gingerbread dessert macaroon candy canes. Candy liquorice carrot cake chocolate bar pastry dessert caramels danish. Donut apple pie tart dragée sesame snaps chocolate tootsie roll jelly-o sugar plum. Chocolate cake sesame snaps jelly beans. Gummies pudding gummies. Jelly-o topping biscuit cookie halvah pudding gingerbread toffee cake. Sesame snaps topping icing jelly cake donut macaroon candy canes jelly beans. Tiramisu pie pie. Cake gingerbread pastry topping jujubes apple pie pie. Jelly beans marshmallow chocolate cake chocolate cake biscuit danish dessert. Halvah biscuit macaroon. Sugar plum pie gummi bears gummies pastry.
        </p>
      </div>
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/AppFrame Side Nav Scrolling 1`] = `
<div
  data-css-2p2lwl=""
>
  <div
    data-css-teuamr=""
    href="#ps-appframe--skip-target"
  >
    <button
      data-css-c3sd2l=""
      disabled={false}
      style={Object {}}
      tabIndex={0}
    >
      <span
        data-css-15b13by=""
      >
        skip to main content
      </span>
    </button>
  </div>
  <div
    data-css-1oxt2bx=""
    id="ps-appframe--topnav"
  >
    <div>
      <div
        data-css-tuvdh3=""
      >
        <div
          data-css-1kfsc44=""
        >
          <div
            data-css-1ij5lym=""
          >
            <div
              data-css-1yi1k4r=""
            >
              <div
                data-css-1yppk9l=""
              >
                <svg
                  aria-hidden={true}
                  viewBox="0 0 32 32"
                >
                  <defs>
                    <linearGradient
                      gradientUnits="userSpaceOnUse"
                      id="skills-gradient"
                      x1="45.6377"
                      x2="-32.2436"
                      y1="47.4727"
                      y2="-35.2537"
                    >
                      <stop
                        offset="0.03"
                        stopColor="#F05A28"
                      />
                      <stop
                        offset="0.93"
                        stopColor="#EB008B"
                      />
                    </linearGradient>
                  </defs>
                  <path
                    d="M0 0V32H32V0H0ZM9.4053 12.7438L15.088 16L9.4053 19.287V12.7438ZM9.4053 24.8503V21.6468L19.1842 16L9.4053 10.3532V7.17166L24.6955 16L9.4053 24.8503Z"
                    fill="url(#skills-gradient)"
                  />
                </svg>
              </div>
              <div
                data-css-1b9xv68=""
              >
                SKILLS
              </div>
            </div>
          </div>
        </div>
        <div
          data-css-1ns9ldv=""
        />
        <div
          data-css-jgr69u=""
        />
        <div>
          <div
            data-css-1ij5lym=""
          >
            <div
              data-css-91smc8=""
            >
              <div
                data-css-79vgce=""
              >
                <div
                  aria-label="Jake"
                  data-css-1xbr5gr=""
                  style={
                    Object {
                      "backgroundColor": "#008F46",
                    }
                  }
                >
                  J
                </div>
              </div>
              <div
                data-css-1mmc9g1=""
              >
                <div
                  data-css-6flzpu=""
                >
                  Jake
                </div>
                <div
                  data-css-60db85=""
                >
                  Accenture
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-css-1lvztem=""
  >
    <div
      data-css-1429j9j=""
    >
      <div
        data-css-1srorb2=""
      >
        <div
          data-css-axmbrd=""
          data-css-q1pa3g=""
          data-scrollable={true}
        >
          <div
            data-css-1srorb2=""
          >
            <div
              data-css-3e2h8g=""
              onScroll={[Function]}
            >
              <div>
                <div
                  data-css-cn9gc0=""
                />
              </div>
            </div>
          </div>
          <div
            data-css-1ackutz=""
            data-css-ejkno9=""
            draggable={true}
            onDrag={[Function]}
            onDragEnd={[Function]}
            onDragStart={[Function]}
          />
        </div>
      </div>
    </div>
    <main
      data-css-1ixsor8=""
    >
      <a
        id="ps-appframe--skip-target"
        onClick={[Function]}
        tabIndex={-1}
      />
      <div
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        <div
          data-css-60rhmp=""
        >
          <div
            data-css-f5q9fb=""
          >
            <div
              data-css-wlfhsa=""
            >
              <h3
                data-css-vetqvm=""
              >
                Page title
              </h3>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-60rhmp=""
      >
        <p
          data-css-17nixd9=""
        >
          Cupcake ipsum dolor sit amet. Sweet gummi bears dragée. Pie dragée cotton candy candy canes bear claw apple pie. Dessert apple pie caramels carrot cake bear claw sweet donut. Croissant chocolate bear claw jelly chocolate candy pie pudding caramels. Cake muffin candy liquorice liquorice tiramisu powder pie dragée. Danish soufflé sweet apple pie cupcake tart. Danish cookie oat cake tiramisu lemon drops pie apple pie cake cotton candy. Pudding brownie jujubes. Chocolate bar biscuit liquorice candy jelly-o tiramisu icing muffin sweet roll. Jelly candy canes chocolate dragée. Danish biscuit sugar plum cake. Cotton candy soufflé muffin gummi bears.
        </p>
        <p
          data-css-17nixd9=""
        >
          Sweet roll sweet roll cotton candy marshmallow lemon drops caramels sweet roll toffee. Bear claw powder ice cream topping wafer cake tootsie roll. Lemon drops pudding dessert toffee fruitcake toffee. Icing marzipan cake pastry biscuit liquorice chupa chups sesame snaps. Biscuit muffin donut. Marshmallow carrot cake icing icing dragée jujubes lemon drops. Danish cheesecake sesame snaps. Sweet sugar plum fruitcake tootsie roll. Fruitcake jelly-o soufflé muffin cheesecake pie apple pie jelly powder. Cake dragée danish muffin dragée soufflé marzipan croissant danish. Soufflé chupa chups cake biscuit icing pastry cake danish danish. Icing cotton candy oat cake chocolate macaroon tiramisu sweet dragée cake. Ice cream carrot cake lemon drops. Jelly sweet wafer liquorice brownie sesame snaps halvah apple pie jelly-o.
        </p>
        <p
          data-css-17nixd9=""
        >
          Tootsie roll dragée apple pie. Pie cake toffee caramels gummies chupa chups carrot cake chupa chups. Jelly-o fruitcake macaroon chocolate. Brownie lollipop sugar plum gummies marshmallow muffin bonbon carrot cake. Pudding powder lemon drops halvah. Icing cupcake pastry chupa chups danish sweet bear claw sugar plum. Chupa chups wafer donut lollipop. Sweet roll croissant cake chocolate cake croissant pastry toffee. Chocolate cake liquorice halvah pastry danish candy canes. Apple pie pastry topping sesame snaps cupcake liquorice icing chocolate bar brownie. Chocolate cake sesame snaps cake gummies cupcake pastry jujubes fruitcake. Muffin fruitcake soufflé macaroon danish. Dessert chocolate marshmallow sesame snaps donut toffee ice cream sugar plum dragée.
        </p>
        <p
          data-css-17nixd9=""
        >
          Marzipan lollipop jelly-o soufflé macaroon tart danish tart dessert. Chupa chups lemon drops lemon drops jujubes dragée dessert. Wafer chupa chups gummi bears sugar plum gummies. Powder topping apple pie danish sweet roll. Pudding toffee brownie. Tootsie roll lemon drops sweet macaroon jelly-o oat cake muffin chocolate. Wafer chocolate danish cookie cookie danish. Chocolate jelly-o gingerbread fruitcake croissant wafer lollipop bonbon macaroon. Carrot cake candy dessert. Brownie gummies topping sweet roll jelly sesame snaps croissant marshmallow caramels. Candy canes jelly-o jelly beans chupa chups tiramisu cupcake cake tart. Biscuit brownie chocolate bar danish candy canes donut liquorice. Muffin cake jelly beans muffin powder gingerbread toffee. Gingerbread topping toffee chupa chups sweet roll.
        </p>
        <p
          data-css-17nixd9=""
        >
          Jelly beans gingerbread dessert macaroon candy canes. Candy liquorice carrot cake chocolate bar pastry dessert caramels danish. Donut apple pie tart dragée sesame snaps chocolate tootsie roll jelly-o sugar plum. Chocolate cake sesame snaps jelly beans. Gummies pudding gummies. Jelly-o topping biscuit cookie halvah pudding gingerbread toffee cake. Sesame snaps topping icing jelly cake donut macaroon candy canes jelly beans. Tiramisu pie pie. Cake gingerbread pastry topping jujubes apple pie pie. Jelly beans marshmallow chocolate cake chocolate cake biscuit danish dessert. Halvah biscuit macaroon. Sugar plum pie gummi bears gummies pastry.
        </p>
        <p
          data-css-17nixd9=""
        >
          Marzipan lollipop jelly-o soufflé macaroon tart danish tart dessert. Chupa chups lemon drops lemon drops jujubes dragée dessert. Wafer chupa chups gummi bears sugar plum gummies. Powder topping apple pie danish sweet roll. Pudding toffee brownie. Tootsie roll lemon drops sweet macaroon jelly-o oat cake muffin chocolate. Wafer chocolate danish cookie cookie danish. Chocolate jelly-o gingerbread fruitcake croissant wafer lollipop bonbon macaroon. Carrot cake candy dessert. Brownie gummies topping sweet roll jelly sesame snaps croissant marshmallow caramels. Candy canes jelly-o jelly beans chupa chups tiramisu cupcake cake tart. Biscuit brownie chocolate bar danish candy canes donut liquorice. Muffin cake jelly beans muffin powder gingerbread toffee. Gingerbread topping toffee chupa chups sweet roll.
        </p>
        <p
          data-css-17nixd9=""
        >
          Jelly beans gingerbread dessert macaroon candy canes. Candy liquorice carrot cake chocolate bar pastry dessert caramels danish. Donut apple pie tart dragée sesame snaps chocolate tootsie roll jelly-o sugar plum. Chocolate cake sesame snaps jelly beans. Gummies pudding gummies. Jelly-o topping biscuit cookie halvah pudding gingerbread toffee cake. Sesame snaps topping icing jelly cake donut macaroon candy canes jelly beans. Tiramisu pie pie. Cake gingerbread pastry topping jujubes apple pie pie. Jelly beans marshmallow chocolate cake chocolate cake biscuit danish dessert. Halvah biscuit macaroon. Sugar plum pie gummi bears gummies pastry.
        </p>
      </div>
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/AppFrame Side Nav Uncontrolled 1`] = `
<div
  data-css-2p2lwl=""
>
  <div
    data-css-teuamr=""
    href="#ps-appframe--skip-target"
  >
    <button
      data-css-c3sd2l=""
      disabled={false}
      style={Object {}}
      tabIndex={0}
    >
      <span
        data-css-15b13by=""
      >
        skip to main content
      </span>
    </button>
  </div>
  <div
    data-css-1oxt2bx=""
    id="ps-appframe--topnav"
  >
    <div>
      <div
        data-css-tuvdh3=""
      >
        <div
          data-css-1qn6dtd=""
        >
          <span
            data-css-ruxays=""
          >
            <div
              data-css-1ij5lym=""
            >
              <button
                data-css-167upi1=""
                onClick={[Function]}
              >
                <span
                  data-css-50rv4t=""
                >
                  <span
                    data-css-1009u4g=""
                  >
                    <div
                      data-css-7dab2f=""
                    >
                      <svg
                        aria-label="menu icon"
                        role="img"
                        viewBox="0 0 24 24"
                      >
                        <path
                          clipRule="evenodd"
                          d="M22 11.5v1a.5.5 0 01-.5.5h-19a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h19a.5.5 0 01.5.5zM2.5 17h18.98a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5zm0-12h18.977a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5z"
                          fillRule="evenodd"
                        />
                      </svg>
                    </div>
                  </span>
                </span>
              </button>
            </div>
            <div
              data-css-1pig4yn=""
            />
          </span>
        </div>
        <div
          data-css-1kfsc44=""
        >
          <div
            data-css-1ij5lym=""
          >
            <div
              data-css-1yi1k4r=""
            >
              <div
                data-css-1yppk9l=""
              >
                <svg
                  aria-hidden={true}
                  viewBox="0 0 32 32"
                >
                  <defs>
                    <linearGradient
                      gradientUnits="userSpaceOnUse"
                      id="skills-gradient"
                      x1="45.6377"
                      x2="-32.2436"
                      y1="47.4727"
                      y2="-35.2537"
                    >
                      <stop
                        offset="0.03"
                        stopColor="#F05A28"
                      />
                      <stop
                        offset="0.93"
                        stopColor="#EB008B"
                      />
                    </linearGradient>
                  </defs>
                  <path
                    d="M0 0V32H32V0H0ZM9.4053 12.7438L15.088 16L9.4053 19.287V12.7438ZM9.4053 24.8503V21.6468L19.1842 16L9.4053 10.3532V7.17166L24.6955 16L9.4053 24.8503Z"
                    fill="url(#skills-gradient)"
                  />
                </svg>
              </div>
              <div
                data-css-1b9xv68=""
              >
                SKILLS
              </div>
            </div>
          </div>
        </div>
        <div
          data-css-1ns9ldv=""
        />
        <div
          data-css-jgr69u=""
        />
        <div>
          <div
            data-css-1ij5lym=""
          >
            <div
              data-css-91smc8=""
            >
              <div
                data-css-79vgce=""
              >
                <div
                  aria-label="Jake"
                  data-css-1xbr5gr=""
                  style={
                    Object {
                      "backgroundColor": "#008F46",
                    }
                  }
                >
                  J
                </div>
              </div>
              <div
                data-css-1mmc9g1=""
              >
                <div
                  data-css-6flzpu=""
                >
                  Jake
                </div>
                <div
                  data-css-60db85=""
                >
                  Accenture
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-css-1lvztem=""
  >
    <div
      data-css-1429j9j=""
    >
      <div
        data-css-1srorb2=""
      >
        <div
          data-css-axmbrd=""
          data-css-q1pa3g=""
          data-scrollable={true}
        >
          <div
            data-css-1srorb2=""
          >
            <div
              data-css-3e2h8g=""
              onScroll={[Function]}
            >
              <div>
                <div
                  style={
                    Object {
                      "margin": "12px 0 0",
                      "opacity": 0,
                      "padding": "0 24px",
                    }
                  }
                >
                  <h2
                    style={
                      Object {
                        "margin": 0,
                      }
                    }
                  >
                    <span
                      data-css-v1s45p=""
                    >
                      Section Header
                    </span>
                  </h2>
                </div>
                <ul
                  data-css-15hj73r=""
                >
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              First Item
                            </span>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          data-css-1pa08jv=""
                          data-css-1xd3fna=""
                        >
                          <a
                            href="#"
                          >
                            <span
                              data-css-113cwui=""
                            >
                              First SubItem
                            </span>
                          </a>
                        </div>
                      </li>
                      <li>
                        <div
                          data-css-1pa08jv=""
                          data-css-1xd3fna=""
                        >
                          <a
                            href="#"
                          >
                            <span
                              data-css-113cwui=""
                            >
                              Second SubItem
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              Second Item
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                </ul>
                <div
                  style={
                    Object {
                      "borderBottom": "1px solid rgba(255, 255, 255, 0.15)",
                      "height": 1,
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            data-css-1ackutz=""
            data-css-ejkno9=""
            draggable={true}
            onDrag={[Function]}
            onDragEnd={[Function]}
            onDragStart={[Function]}
          />
        </div>
      </div>
    </div>
    <main
      data-css-1ixsor8=""
    >
      <a
        id="ps-appframe--skip-target"
        onClick={[Function]}
        tabIndex={-1}
      />
      <div
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        <div
          data-css-60rhmp=""
        >
          <div
            data-css-f5q9fb=""
          >
            <div
              data-css-wlfhsa=""
            >
              <h3
                data-css-vetqvm=""
              >
                Page title
              </h3>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-60rhmp=""
      >
        <p
          data-css-17nixd9=""
        >
          Cupcake ipsum dolor sit amet. Sweet gummi bears dragée. Pie dragée cotton candy candy canes bear claw apple pie. Dessert apple pie caramels carrot cake bear claw sweet donut. Croissant chocolate bear claw jelly chocolate candy pie pudding caramels. Cake muffin candy liquorice liquorice tiramisu powder pie dragée. Danish soufflé sweet apple pie cupcake tart. Danish cookie oat cake tiramisu lemon drops pie apple pie cake cotton candy. Pudding brownie jujubes. Chocolate bar biscuit liquorice candy jelly-o tiramisu icing muffin sweet roll. Jelly candy canes chocolate dragée. Danish biscuit sugar plum cake. Cotton candy soufflé muffin gummi bears.
        </p>
        <p
          data-css-17nixd9=""
        >
          Sweet roll sweet roll cotton candy marshmallow lemon drops caramels sweet roll toffee. Bear claw powder ice cream topping wafer cake tootsie roll. Lemon drops pudding dessert toffee fruitcake toffee. Icing marzipan cake pastry biscuit liquorice chupa chups sesame snaps. Biscuit muffin donut. Marshmallow carrot cake icing icing dragée jujubes lemon drops. Danish cheesecake sesame snaps. Sweet sugar plum fruitcake tootsie roll. Fruitcake jelly-o soufflé muffin cheesecake pie apple pie jelly powder. Cake dragée danish muffin dragée soufflé marzipan croissant danish. Soufflé chupa chups cake biscuit icing pastry cake danish danish. Icing cotton candy oat cake chocolate macaroon tiramisu sweet dragée cake. Ice cream carrot cake lemon drops. Jelly sweet wafer liquorice brownie sesame snaps halvah apple pie jelly-o.
        </p>
        <p
          data-css-17nixd9=""
        >
          Tootsie roll dragée apple pie. Pie cake toffee caramels gummies chupa chups carrot cake chupa chups. Jelly-o fruitcake macaroon chocolate. Brownie lollipop sugar plum gummies marshmallow muffin bonbon carrot cake. Pudding powder lemon drops halvah. Icing cupcake pastry chupa chups danish sweet bear claw sugar plum. Chupa chups wafer donut lollipop. Sweet roll croissant cake chocolate cake croissant pastry toffee. Chocolate cake liquorice halvah pastry danish candy canes. Apple pie pastry topping sesame snaps cupcake liquorice icing chocolate bar brownie. Chocolate cake sesame snaps cake gummies cupcake pastry jujubes fruitcake. Muffin fruitcake soufflé macaroon danish. Dessert chocolate marshmallow sesame snaps donut toffee ice cream sugar plum dragée.
        </p>
        <p
          data-css-17nixd9=""
        >
          Marzipan lollipop jelly-o soufflé macaroon tart danish tart dessert. Chupa chups lemon drops lemon drops jujubes dragée dessert. Wafer chupa chups gummi bears sugar plum gummies. Powder topping apple pie danish sweet roll. Pudding toffee brownie. Tootsie roll lemon drops sweet macaroon jelly-o oat cake muffin chocolate. Wafer chocolate danish cookie cookie danish. Chocolate jelly-o gingerbread fruitcake croissant wafer lollipop bonbon macaroon. Carrot cake candy dessert. Brownie gummies topping sweet roll jelly sesame snaps croissant marshmallow caramels. Candy canes jelly-o jelly beans chupa chups tiramisu cupcake cake tart. Biscuit brownie chocolate bar danish candy canes donut liquorice. Muffin cake jelly beans muffin powder gingerbread toffee. Gingerbread topping toffee chupa chups sweet roll.
        </p>
        <p
          data-css-17nixd9=""
        >
          Jelly beans gingerbread dessert macaroon candy canes. Candy liquorice carrot cake chocolate bar pastry dessert caramels danish. Donut apple pie tart dragée sesame snaps chocolate tootsie roll jelly-o sugar plum. Chocolate cake sesame snaps jelly beans. Gummies pudding gummies. Jelly-o topping biscuit cookie halvah pudding gingerbread toffee cake. Sesame snaps topping icing jelly cake donut macaroon candy canes jelly beans. Tiramisu pie pie. Cake gingerbread pastry topping jujubes apple pie pie. Jelly beans marshmallow chocolate cake chocolate cake biscuit danish dessert. Halvah biscuit macaroon. Sugar plum pie gummi bears gummies pastry.
        </p>
        <p
          data-css-17nixd9=""
        >
          Marzipan lollipop jelly-o soufflé macaroon tart danish tart dessert. Chupa chups lemon drops lemon drops jujubes dragée dessert. Wafer chupa chups gummi bears sugar plum gummies. Powder topping apple pie danish sweet roll. Pudding toffee brownie. Tootsie roll lemon drops sweet macaroon jelly-o oat cake muffin chocolate. Wafer chocolate danish cookie cookie danish. Chocolate jelly-o gingerbread fruitcake croissant wafer lollipop bonbon macaroon. Carrot cake candy dessert. Brownie gummies topping sweet roll jelly sesame snaps croissant marshmallow caramels. Candy canes jelly-o jelly beans chupa chups tiramisu cupcake cake tart. Biscuit brownie chocolate bar danish candy canes donut liquorice. Muffin cake jelly beans muffin powder gingerbread toffee. Gingerbread topping toffee chupa chups sweet roll.
        </p>
        <p
          data-css-17nixd9=""
        >
          Jelly beans gingerbread dessert macaroon candy canes. Candy liquorice carrot cake chocolate bar pastry dessert caramels danish. Donut apple pie tart dragée sesame snaps chocolate tootsie roll jelly-o sugar plum. Chocolate cake sesame snaps jelly beans. Gummies pudding gummies. Jelly-o topping biscuit cookie halvah pudding gingerbread toffee cake. Sesame snaps topping icing jelly cake donut macaroon candy canes jelly beans. Tiramisu pie pie. Cake gingerbread pastry topping jujubes apple pie pie. Jelly beans marshmallow chocolate cake chocolate cake biscuit danish dessert. Halvah biscuit macaroon. Sugar plum pie gummi bears gummies pastry.
        </p>
      </div>
    </main>
  </div>
</div>
`;

exports[`Storyshots Components/AppFrame/Examples Skills 1`] = `
<div
  data-css-2p2lwl=""
>
  <div
    data-css-teuamr=""
    href="#ps-appframe--skip-target"
  >
    <button
      data-css-c3sd2l=""
      disabled={false}
      style={Object {}}
      tabIndex={0}
    >
      <span
        data-css-15b13by=""
      >
        skip to main content
      </span>
    </button>
  </div>
  <div
    data-css-1oxt2bx=""
    id="ps-appframe--topnav"
  >
    <div>
      <div
        data-css-tuvdh3=""
      >
        <div
          data-css-1qn6dtd=""
        >
          <span
            data-css-ruxays=""
          >
            <div
              data-css-1ij5lym=""
            >
              <button
                data-css-167upi1=""
                onClick={[Function]}
              >
                <span
                  data-css-50rv4t=""
                >
                  <span
                    data-css-1009u4g=""
                  >
                    <div
                      data-css-7dab2f=""
                    >
                      <svg
                        aria-label="menu icon"
                        role="img"
                        viewBox="0 0 24 24"
                      >
                        <path
                          clipRule="evenodd"
                          d="M22 11.5v1a.5.5 0 01-.5.5h-19a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h19a.5.5 0 01.5.5zM2.5 17h18.98a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5zm0-12h18.977a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H2.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5z"
                          fillRule="evenodd"
                        />
                      </svg>
                    </div>
                  </span>
                </span>
              </button>
            </div>
            <div
              data-css-1pig4yn=""
            />
          </span>
        </div>
        <div
          data-css-1kfsc44=""
        >
          <div
            data-css-1ij5lym=""
          >
            <div
              data-css-1yi1k4r=""
            >
              <div
                data-css-1yppk9l=""
              >
                <svg
                  aria-hidden={true}
                  viewBox="0 0 32 32"
                >
                  <defs>
                    <linearGradient
                      gradientUnits="userSpaceOnUse"
                      id="skills-gradient"
                      x1="45.6377"
                      x2="-32.2436"
                      y1="47.4727"
                      y2="-35.2537"
                    >
                      <stop
                        offset="0.03"
                        stopColor="#F05A28"
                      />
                      <stop
                        offset="0.93"
                        stopColor="#EB008B"
                      />
                    </linearGradient>
                  </defs>
                  <path
                    d="M0 0V32H32V0H0ZM9.4053 12.7438L15.088 16L9.4053 19.287V12.7438ZM9.4053 24.8503V21.6468L19.1842 16L9.4053 10.3532V7.17166L24.6955 16L9.4053 24.8503Z"
                    fill="url(#skills-gradient)"
                  />
                </svg>
              </div>
              <div
                data-css-1b9xv68=""
              >
                SKILLS
              </div>
            </div>
          </div>
        </div>
        <div
          data-css-1ns9ldv=""
        />
        <div
          data-css-jgr69u=""
        />
        <div>
          <div
            data-css-1ij5lym=""
          >
            <div
              data-css-91smc8=""
            >
              <div
                data-css-79vgce=""
              >
                <div
                  aria-label="Jake"
                  data-css-1xbr5gr=""
                  style={
                    Object {
                      "backgroundColor": "#008F46",
                    }
                  }
                >
                  J
                </div>
              </div>
              <div
                data-css-1mmc9g1=""
              >
                <div
                  data-css-6flzpu=""
                >
                  Jake
                </div>
                <div
                  data-css-60db85=""
                >
                  Accenture
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-css-1lvztem=""
  >
    <div
      data-css-1429j9j=""
    >
      <div
        data-css-1srorb2=""
      >
        <div
          data-css-axmbrd=""
          data-css-q1pa3g=""
          data-scrollable={true}
        >
          <div
            data-css-1srorb2=""
          >
            <div
              data-css-3e2h8g=""
              onScroll={[Function]}
            >
              <div>
                <ul
                  data-css-15hj73r=""
                >
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="home icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  clipRule="evenodd"
                                  d="M21 13.417l.989.988a.5.5 0 00.707 0l.707-.708a.5.5 0 000-.707L12.353 1.954a.5.5 0 00-.707 0L.61 12.99a.5.5 0 000 .707l.707.707a.5.5 0 00.707 0L3 13.428v7.573a1 1 0 001 1h5a1 1 0 001-1v-4a2 2 0 114 0v4a1 1 0 001 1h5a1 1 0 001-1v-7.584zM5 11.428l7-7 7 6.991v8.582h-3v-3a4 4 0 10-8 0v3H5v-8.573z"
                                  fillRule="evenodd"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              Home
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="browse icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  clipRule="evenodd"
                                  d="M3 9h18a1 1 0 011 1v10a1 1 0 01-1 1H3a1 1 0 01-1-1V10a1 1 0 011-1zm1 2v8h16v-8H4zm1-5h14a1 1 0 011 1v1H4V7a1 1 0 011-1zm3-3h8a1 1 0 011 1v1H7V4a1 1 0 011-1z"
                                  fillRule="evenodd"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              Browse
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                </ul>
                <div
                  style={
                    Object {
                      "borderBottom": "1px solid rgba(255, 255, 255, 0.15)",
                      "height": 1,
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "margin": "12px 0 0",
                      "opacity": 0,
                      "padding": "0 24px",
                    }
                  }
                >
                  <h2
                    style={
                      Object {
                        "margin": 0,
                      }
                    }
                  >
                    <span
                      data-css-v1s45p=""
                    >
                      Admin Tools
                    </span>
                  </h2>
                </div>
                <ul
                  data-css-15hj73r=""
                >
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              Dashboard
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              Account
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              People
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              Priorities
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              Analytics
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              Logs
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                </ul>
                <div
                  style={
                    Object {
                      "borderBottom": "1px solid rgba(255, 255, 255, 0.15)",
                      "height": 1,
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "margin": "12px 0 0",
                      "opacity": 0,
                      "padding": "0 24px",
                    }
                  }
                >
                  <h2
                    style={
                      Object {
                        "margin": 0,
                      }
                    }
                  >
                    <span
                      data-css-v1s45p=""
                    >
                      Content Tools
                    </span>
                  </h2>
                </div>
                <ul
                  data-css-15hj73r=""
                >
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              Home
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                  <li
                    data-css-1268me8=""
                  >
                    <ul
                      data-css-gkw1j5=""
                    >
                      <li>
                        <div
                          data-css-1dfha3z=""
                          data-css-1pa08jv=""
                        >
                          <a
                            aria-expanded={true}
                            data-css-zrqgca=""
                            href="#"
                          >
                            <div
                              data-css-1kqp8s2=""
                              data-css-7dab2f=""
                            >
                              <svg
                                aria-label="placeholder icon"
                                role="img"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 3h-2v2h2V3zm-4 0v2h-2V3h2zM9 3v2H7V3h2zM5 3v2H3V3.9a.9.9 0 01.9-.9H5zM3 9V7h2v2H3zm0 2v2h2v-2H3zm0 6v-2h2v2H3zm0 2v1.1a.9.9 0 00.9.9H5v-2H3zm4 0v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm4 0v2h1.1a.9.9 0 00.9-.9V19h-2zm2-4h-2v2h2v-2zm0-4v2h-2v-2h2zm0-2V7h-2v2h2zm0-5.1V5h-2V3h1.1a.9.9 0 01.9.9zM11 8.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V11h2.5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H13v2.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5V13H8.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5H11V8.5z"
                                />
                              </svg>
                            </div>
                            <span
                              data-css-113cwui=""
                            >
                              Dashboard
                            </span>
                          </a>
                        </div>
                      </li>
                    </ul>
                  </li>
                </ul>
                <div
                  style={
                    Object {
                      "borderBottom": "1px solid rgba(255, 255, 255, 0.15)",
                      "height": 1,
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            data-css-1ackutz=""
            data-css-ejkno9=""
            draggable={true}
            onDrag={[Function]}
            onDragEnd={[Function]}
            onDragStart={[Function]}
          />
        </div>
      </div>
    </div>
    <main
      data-css-1ixsor8=""
    >
      <a
        id="ps-appframe--skip-target"
        onClick={[Function]}
        tabIndex={-1}
      />
      <div
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        <div
          data-css-60rhmp=""
        >
          <div
            data-css-f5q9fb=""
          >
            <div
              data-css-wlfhsa=""
            >
              <h3
                data-css-vetqvm=""
              >
                Page title
              </h3>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-60rhmp=""
      >
        <p
          data-css-17nixd9=""
        >
          Cupcake ipsum dolor sit amet. Sweet gummi bears dragée. Pie dragée cotton candy candy canes bear claw apple pie. Dessert apple pie caramels carrot cake bear claw sweet donut. Croissant chocolate bear claw jelly chocolate candy pie pudding caramels. Cake muffin candy liquorice liquorice tiramisu powder pie dragée. Danish soufflé sweet apple pie cupcake tart. Danish cookie oat cake tiramisu lemon drops pie apple pie cake cotton candy. Pudding brownie jujubes. Chocolate bar biscuit liquorice candy jelly-o tiramisu icing muffin sweet roll. Jelly candy canes chocolate dragée. Danish biscuit sugar plum cake. Cotton candy soufflé muffin gummi bears.
        </p>
        <p
          data-css-17nixd9=""
        >
          Sweet roll sweet roll cotton candy marshmallow lemon drops caramels sweet roll toffee. Bear claw powder ice cream topping wafer cake tootsie roll. Lemon drops pudding dessert toffee fruitcake toffee. Icing marzipan cake pastry biscuit liquorice chupa chups sesame snaps. Biscuit muffin donut. Marshmallow carrot cake icing icing dragée jujubes lemon drops. Danish cheesecake sesame snaps. Sweet sugar plum fruitcake tootsie roll. Fruitcake jelly-o soufflé muffin cheesecake pie apple pie jelly powder. Cake dragée danish muffin dragée soufflé marzipan croissant danish. Soufflé chupa chups cake biscuit icing pastry cake danish danish. Icing cotton candy oat cake chocolate macaroon tiramisu sweet dragée cake. Ice cream carrot cake lemon drops. Jelly sweet wafer liquorice brownie sesame snaps halvah apple pie jelly-o.
        </p>
        <p
          data-css-17nixd9=""
        >
          Tootsie roll dragée apple pie. Pie cake toffee caramels gummies chupa chups carrot cake chupa chups. Jelly-o fruitcake macaroon chocolate. Brownie lollipop sugar plum gummies marshmallow muffin bonbon carrot cake. Pudding powder lemon drops halvah. Icing cupcake pastry chupa chups danish sweet bear claw sugar plum. Chupa chups wafer donut lollipop. Sweet roll croissant cake chocolate cake croissant pastry toffee. Chocolate cake liquorice halvah pastry danish candy canes. Apple pie pastry topping sesame snaps cupcake liquorice icing chocolate bar brownie. Chocolate cake sesame snaps cake gummies cupcake pastry jujubes fruitcake. Muffin fruitcake soufflé macaroon danish. Dessert chocolate marshmallow sesame snaps donut toffee ice cream sugar plum dragée.
        </p>
        <p
          data-css-17nixd9=""
        >
          Marzipan lollipop jelly-o soufflé macaroon tart danish tart dessert. Chupa chups lemon drops lemon drops jujubes dragée dessert. Wafer chupa chups gummi bears sugar plum gummies. Powder topping apple pie danish sweet roll. Pudding toffee brownie. Tootsie roll lemon drops sweet macaroon jelly-o oat cake muffin chocolate. Wafer chocolate danish cookie cookie danish. Chocolate jelly-o gingerbread fruitcake croissant wafer lollipop bonbon macaroon. Carrot cake candy dessert. Brownie gummies topping sweet roll jelly sesame snaps croissant marshmallow caramels. Candy canes jelly-o jelly beans chupa chups tiramisu cupcake cake tart. Biscuit brownie chocolate bar danish candy canes donut liquorice. Muffin cake jelly beans muffin powder gingerbread toffee. Gingerbread topping toffee chupa chups sweet roll.
        </p>
        <p
          data-css-17nixd9=""
        >
          Jelly beans gingerbread dessert macaroon candy canes. Candy liquorice carrot cake chocolate bar pastry dessert caramels danish. Donut apple pie tart dragée sesame snaps chocolate tootsie roll jelly-o sugar plum. Chocolate cake sesame snaps jelly beans. Gummies pudding gummies. Jelly-o topping biscuit cookie halvah pudding gingerbread toffee cake. Sesame snaps topping icing jelly cake donut macaroon candy canes jelly beans. Tiramisu pie pie. Cake gingerbread pastry topping jujubes apple pie pie. Jelly beans marshmallow chocolate cake chocolate cake biscuit danish dessert. Halvah biscuit macaroon. Sugar plum pie gummi bears gummies pastry.
        </p>
        <p
          data-css-17nixd9=""
        >
          Marzipan lollipop jelly-o soufflé macaroon tart danish tart dessert. Chupa chups lemon drops lemon drops jujubes dragée dessert. Wafer chupa chups gummi bears sugar plum gummies. Powder topping apple pie danish sweet roll. Pudding toffee brownie. Tootsie roll lemon drops sweet macaroon jelly-o oat cake muffin chocolate. Wafer chocolate danish cookie cookie danish. Chocolate jelly-o gingerbread fruitcake croissant wafer lollipop bonbon macaroon. Carrot cake candy dessert. Brownie gummies topping sweet roll jelly sesame snaps croissant marshmallow caramels. Candy canes jelly-o jelly beans chupa chups tiramisu cupcake cake tart. Biscuit brownie chocolate bar danish candy canes donut liquorice. Muffin cake jelly beans muffin powder gingerbread toffee. Gingerbread topping toffee chupa chups sweet roll.
        </p>
        <p
          data-css-17nixd9=""
        >
          Jelly beans gingerbread dessert macaroon candy canes. Candy liquorice carrot cake chocolate bar pastry dessert caramels danish. Donut apple pie tart dragée sesame snaps chocolate tootsie roll jelly-o sugar plum. Chocolate cake sesame snaps jelly beans. Gummies pudding gummies. Jelly-o topping biscuit cookie halvah pudding gingerbread toffee cake. Sesame snaps topping icing jelly cake donut macaroon candy canes jelly beans. Tiramisu pie pie. Cake gingerbread pastry topping jujubes apple pie pie. Jelly beans marshmallow chocolate cake chocolate cake biscuit danish dessert. Halvah biscuit macaroon. Sugar plum pie gummi bears gummies pastry.
        </p>
      </div>
    </main>
  </div>
</div>
`;
